--- a/content/docs/access/account.mdx
+++ b/content/docs/access/account.mdx
@@ -29,7 +29,7 @@ Later, you can access your account and services in the same way.
 You may add credentials from other organizations you're affiliated with, including social providers like Google, ORCID, or Czech MojeID, to access your e-INFRA CZ Account.
 </Callout>
 
-## Compliance With Access Conditions¶
+## Compliance With Access Conditions
 
 Your affiliation with an academic organization (and thus your compliance with access conditions) is usually verified automatically during service registration or upon access. 
 
@@ -38,21 +38,20 @@ Periodic renewal of account compliance may be required.
 If compliance cannot be automatically verified due to the home organization's limitations in providing data, service operators may request additional steps individually.
 
 
-
 ## Users' Duties
 
 According to the amendment of Act No. 130/2002 Coll., governing the reporting of R&D results achieved using large research infrastructures (LRIs), e-INFRA CZ users are required to comply with the following obligations:
 
-- Include mandatory acknowledgments in related publications.
+- Include mandatory acknowledgements in related publications.
 - Correctly attach e-INFRA CZ as a large research infrastructure source in R&D results.
 
 <Callout type="info">
-The acknowledgments and proper reporting procedures allow ongoing provision of advanced computing resources to the academic and research institutions in the Czech Republic.
+The acknowledgements and proper reporting procedures allow the ongoing provision of advanced computing resources to the academic and research institutions in the Czech Republic.
 </Callout>
 
 ### Mandatory Acknowledgment Text in Publications
 
-Your publications must include the following acknowledgment:
+Your publications must include the following acknowledgement:
 Czech version
 ```
 Tato práce byla podpořena Ministerstvem školství, mládeže a tělovýchovy
@@ -94,7 +93,7 @@ Typical login steps are:
 2. Prompted to log in.
 3. Select your home organization from the list of organizations.
 4. Redirected to your home organization's login form.
-5. Enter home organization's credentials (your home login and password).
+5. Enter your home organization's credentials (your home login and password).
 6. Upon successful login, you are redirected back to the initially requested service.
 
 <Callout type="info">
@@ -123,7 +122,7 @@ TBD link
 
 ### Non-Web Services¶
 
-Non-web services typically authenticate via login/password, Kerberos, or SSH keys. Refer to the respective service documentation for precise instructions.
+Non-web services typically authenticate via login/password, Kerberos, or SSH keys. Please take a look at the respective service documentation for precise instructions.
 
 
 ## e-INFRA CZ Login/Password Management
