--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -52,6 +52,7 @@ Alternatively you can use the TOTP capability of your password manager e.g.:
 If you already have a TOTP app installed, you don't have to install another one, you can just add e-INFRA CZ Account.
 
 TOTP is defined [RFC 6238](https://datatracker.ietf.org/doc/html/rfc6238)
+</Callout>
 
 ### WebAuthn
 
@@ -79,6 +80,7 @@ If you want to learn more, check out [webauthn.io](https://webauthn.io/) and [we
 * Android 7+ (a screen lock has to be set (fingerprint or face recognition)
 * iOS 14.5+ (Touch ID, Face ID)
 * For Linux, you can try Rust U2F or tpm-fido.
+</Callout>
 
 #### WebAuthn on MS Windows
 
@@ -135,7 +137,7 @@ You do not have to back up the QR code or the link - you can register more TOTP 
 
 <Callout type="info">
 Next time you sign in at [https://mfa.login.e-infra.cz](https://mfa.login.e-infra.cz) you will have to perform Multi-Factor Authentication with your first token.
-
+</Callout>
 
 ### Add More Tokens
 
