--- a/content/docs/access/perun.mdx
+++ b/content/docs/access/perun.mdx
@@ -1,13 +1,14 @@
 ---
 title: Perun
 ---
-User accounts in MetaCentrum are accessible through [e-INFRA instance of Perun](https://perun.e-infra.cz).
 
-The Perun service will be useful when you need to:
+Your account and access to services are managed by [e-INFRA instance of Perun](https://perun.e-infra.cz), based on the AARC Blueprint Architecture. The Perun service will be useful when you need to:
 
 - **check status** of your account (valid until, expired, blocked...),
-- **view groups** you are a member of,
+- **view and manage groups** you are a member or administrator of
 - **view resources and storages** you have acess to.
+
+**Account properties, name, organization, identities, account extensions, or passwords** are conveniently managed through the [e-INFRA CZ User Profile](https://profile.e-infra.cz/). 
 
 To get a complete user guide for Perun service, see [Perun documentation](https://perunaai.atlassian.net/wiki/spaces/PERUN/pages/524289/User+Documentation).
 
