--- a/content/docs/access/perun.mdx
+++ b/content/docs/access/perun.mdx
@@ -1,14 +1,15 @@
 ---
-title: Perun
+title: Managing Access Using Perun
 ---
 
-Your account and access to services are managed by [e-INFRA instance of Perun](https://perun.e-infra.cz), based on the AARC Blueprint Architecture. The Perun service will be useful when you need to:
+Your account and associated service access are managed centrally by the [e-INFRA Perun](https://perun.e-infra.cz), based on the AARC Blueprint Architecture. 
 
-- **check status** of your account (valid until, expired, blocked...),
-- **view and manage groups** you are a member or administrator of
-- **view resources and storages** you have acess to.
+Through Perun, you can:
+- **Verify your account status** (e.g., active, expired).
+- **Review and manage group memberships**, whether as a member or a group administrator.
+- **Check available resources** and storage systems accessible with your account.
 
-**Account properties, name, organization, identities, account extensions, or passwords** are conveniently managed through the [e-INFRA CZ User Profile](https://profile.e-infra.cz/). 
+For **managing personal details**, such as your account identity, name, affiliated organization, linked identities, account renewal processes, or passwords, please use the [e-INFRA CZ User Profile](https://profile.e-infra.cz/). 
 
-To get a complete user guide for Perun service, see [Perun documentation](https://perunaai.atlassian.net/wiki/spaces/PERUN/pages/524289/User+Documentation).
+For detailed instructions and complete documentation on using Perun, refer to the official [Perun documentation](https://perunaai.atlassian.net/wiki/spaces/PERUN/pages/524289/User+Documentation).
 
