--- a/content/docs/access/account.mdx
+++ b/content/docs/access/account.mdx
@@ -1,5 +1,5 @@
 ---
-title: e-INFRA CZ Account Documentation
+title: How to Get Access
 ---
 ## Access Conditions
 
@@ -78,7 +78,7 @@ Programme: LM – Large Research Infrastructure projects for R&D&I
 Principal Investigator: Ing. Jakub Papírník
 ```
 
-## Login Process¶
+## Login Process
 
 e-INFRA CZ offers two primary authentication methods for web-based services:
 
@@ -127,7 +127,7 @@ Non-web services typically authenticate via login/password, Kerberos, or SSH key
 
 ## e-INFRA CZ Login/Password Management
 
-By default, your e-INFRA CZ Account doesn't require new credentials; however, some services necessitate specific e-INFRA CZ username/password credentials. You will create these upon first using such a service. Once defined, these credentials are uniform across all services requiring them and managed at the [e-INFRA CZ User Profile](https://profile.e-infra.cz).
+By default, your e-INFRA CZ Account doesn't require new credentials; however, some services necessitate specific e-INFRA CZ username/password credentials. You'll first need to create these after using such a service. Once defined, these credentials are uniform across all services requiring them and managed at the [e-INFRA CZ User Profile](https://profile.e-infra.cz).
 
 
 ## Personal Account and Password Changes
