--- a/content/docs/access/account.mdx
+++ b/content/docs/access/account.mdx
@@ -120,7 +120,7 @@ TBD link
 - These credentials can be managed via your [e-INFRA CZ User Profile](https://profile.e-infra.cz).
 
 
-### Non-Web Services¶
+### Non-Web Services
 
 Non-web services typically authenticate via login/password, Kerberos, or SSH keys. Please take a look at the respective service documentation for precise instructions.
 
