--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -15,7 +15,7 @@ You are encouraged to also generate one-time recovery codes for regaining access
 ## Available Methods of MFA Verification
 
 The Interactive Guide to Help You Choose the Right MFA Type
-TBD
+
 
 
 
@@ -121,19 +121,21 @@ Once you add your first token you will need to perform MFA at login whenever you
 3. Visit [e-INFRA CZ User Profile](https://profile.e-infra.cz/profile), select `Settings` -> `Authentication` and click on `Manage my MFA tokens`
 4. Sign in with your `e-INFRA CZ Account`
 5. Enter the token management application (privacyIDEA) by clicking on `Log in`
-TBD picture
+![Login as](/img/access/add01.jpeg)
 
 6. Click on `Enroll Token` in the left menu
-TBD picture
+![List token](/img/access/add02.jpeg)
+
 
 7. If not selected, select TOTP and enter the description of your first token and confirm it by clicking Enroll Token
-TBD picture
+![List token2](/img/access/add03.jpeg)
 
 8. You will see a QR code with a shared secret. Scan the QR code with your TOTP app.
 
 If you are enrolling from the mobile phone that has installed a TOTP app, click on Here in the text next to the QR code. Shared secret will be transferred via link.
 
 You do not have to back up the QR code or the link - you can register more TOTP apps later, using a different QR code.
+![QR code](/img/access/add04.jpeg)
 
 <Callout type="info">
 Next time you sign in at [https://mfa.login.e-infra.cz](https://mfa.login.e-infra.cz) you will have to perform Multi-Factor Authentication with your first token.
@@ -142,15 +144,15 @@ Next time you sign in at [https://mfa.login.e-infra.cz](https://mfa.login.e-infr
 ### Add More Tokens
 
 1. Click on `Enroll Token` in the left menu. If you opened the page on a WebAuthn capable device, choose token type WebAuthn, enter a description (e.g. "Work laptop") and continue by clicking `Enroll token`.
-TBD picture
+![Add  token](/img/access/add05.jpeg)
 
 2. A dialog window from the web browser or from the operating system pops up, asking for confirmation.
 
 Push the button on your physical authenticator, confirm by fingerprint when on smartphone or perform another required action depending on the device. In the picture you can see the variant for Ubuntu 22.04 (USB authenticator).
-TBD picture
+![Add token2](/img/access/add06.jpeg)
 
 3. If the registration was successful, a confirmation about added token appears.
-TBD picture
+![Add token3](/img/access/add07.jpeg)
    
 4. You may add arbitrary number of TOTP apps and WebAuthn devices. **We highly recommend adding at least two devices and at least one of them with TOTP app**.
 
@@ -159,21 +161,20 @@ TBD picture
 To prevent losing access to your e-INFRA CZ Account in case you lose all registered devices, it is possible to generate one-time recovery codes, which you can securely store or print out.
 
 1. Click on `Enroll Token`
-TBD picture
+![Recovery](/img/access/recovery01.jpeg)
 
 2. As a type choose `PPR: One Time Passwords printed on sheet of paper`, enter description and click on `Enroll Token`
-TBD picture
+![Recovery2](/img/access/recovery02.jpeg)
 
 3. See recovery codes by clicking on `The OTP Values` box. You can also print them out or download as PDF by clicking on `Print the OTP list`.
-TBD picture
-
+![Recovery3](/img/access/recovery03.jpeg)
 
 ### Enable/Disable MFA for All Services
 
 Multi-Factor Authentication is performed if it is **required by the service you are accessing** or if it is set to be **required for all services** in your account settings.
 
 To enabled (force) MFA for all services go to your [e-INFRA CZ User Profil](https://profile.e-infra.cz/) and toggle `Turn on multi-factor authentication for all services` switch at `Settings` -> `Authentication` page. You can disable it again using the same switch.
-TBD picture
+![Toggle](/img/access/toggle.jpeg)
 
 ## Perform MFA
 ### When Is MFA Required?
