--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -55,7 +55,9 @@ Or use the TOTP functionality built into password managers:
 * [BitWarden](https://bitwarden.com/help/integrated-authenticator/)
 * [LastPass Authenticator](https://www.lastpass.com/solutions/authentication)
 
-> If you already use a TOTP app, simply add your e-INFRA CZ account. No need to install another.
+<Callout type="tip">
+If you already use a TOTP app, simply add your e-INFRA CZ account. No need to install another.
+</Callout>
 
 TOTP is standardized in [RFC 6238](https://datatracker.ietf.org/doc/html/rfc6238)
 
@@ -152,7 +154,9 @@ Once you register your first token, MFA will be required whenever you log in to 
 8. Scan the displayed QR code with your TOTP app.
     - If using a mobile device, you can tap the link to open the TOTP app directly.
 
-> You can add more TOTP apps later — a new QR code will be generated.
+<Callout type="tip">
+You can add more TOTP apps later — a new QR code will be generated.
+</Callout>
 
 ![QR code](/img/account/add04.jpeg)
 
@@ -172,8 +176,9 @@ Next time you log in, MFA will be required using this token.
 3. After successful registration a confirmation appears.
 ![Add token3](/img/account/add07.jpeg)
 
-> We **strongly recommend** registering at least two tokens, including one TOTP app, to prevent lockout.
-
+<Callout type="tip">
+We **strongly recommend** registering at least two tokens, including one TOTP app, to prevent lockout.
+</Callout>
 
 ### Recovery Codes
 
