--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -226,8 +226,10 @@ To enable MFA globally:
 
 Both options `TOTP` and `WebAuthn` are displayed, and you must pick the one based on the type of MFA token you registered and have available at the moment. You can have both types of tokens registered, in such a case you can choose any of the options.
 
-> If you have no valid tokens or authentication fails, you will receive an error message.
 
+<Callout type="tip">
+If you have no valid tokens or authentication fails, you will receive an error message.
+</Callout>
 
 ### MFA with Home Organization Login
 
