--- a/content/docs/welcome.mdx
+++ b/content/docs/welcome.mdx
@@ -1,10 +1,18 @@
 ---
-title: Welcome
+title: Account Management
 icon: Single
 ---
-TBD
+
+# Account Management
+
+In this section, you can find information on
 
 - [How to get account](./access/account).
-- Set your personal account information in [Perun](./access/perun).
-- Multi-Factor Autentication [MFA](./access/mfa).
+Learn how to request an account for accessing e-INFRA CZ services, including eligibility requirements and the approval process.
+
+- [How to manage your personal information in Perun](./access/perun).
+Instructions for updating your personal details, managing group memberships, and handling identity-related tasks through the Perun interface.
+
+- [How to manage Multi-Factor Autentication MFA](./access/mfa).
+Step-by-step guide to setting up and using MFA for enhanced security, including supported methods and troubleshooting tips.
 
