--- a/content/docs/access/perun.mdx
+++ b/content/docs/access/perun.mdx
@@ -13,3 +13,14 @@ For **managing personal details**, such as your account identity, name, affiliat
 
 For detailed instructions and complete documentation on using Perun, refer to the official [Perun documentation](https://perunaai.atlassian.net/wiki/spaces/PERUN/pages/524289/User+Documentation).
 
+
+<Callout type="info" title="Credentials">
+By default, your e-INFRA CZ account does not require new credentials. However, some services may ask for a dedicated e-INFRA CZ username and password. You will be prompted to create these credentials the first time you access such a service.
+
+Once created, the same credentials will be used across all services that require them. You can manage them anytime via the [e-INFRA CZ User Profile](https://profile.e-infra.cz).
+</Callout>
+
+## Personal Account Setting and Password Changes
+
+Your account information, settings and password can be managed at: [e-INFRA CZ User Profile](https://profile.e-infra.cz)
+
